<resources>
    <string name="app_name">ToDo App</string>
    <string name="add_task">Add New</string>
    <string name="add_new_task">Add New Todo</string>
    <string name="enter_task">Enter todo detalis...</string>
    <string name="save_new_todo">SAVE</string>
    <string name="delete_all">DELETE ALL</string>
    <string name="todo_title">Enter todo title...</string>
    <string name="date_due">ADD DUE DATE</string>
    <string name="delete_todo">DELETE</string>
    <string name="hide_completed">HIDE COMPLETED</string>
</resources>
