<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd700"
    >

    <TextView
        android:id="@+id/listView_title"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:onClick="onClickToSeeDescription"
        android:text="@string/todo_title"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listView_mark_completed"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickMarkComplete"
        android:text="mark completed"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/listView_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_dateDue"
        android:layout_width="109dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:onClick="onClickGoToCalender"
        android:text="@string/date_due"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView_title"
        tools:text="@string/date_due" />

    <TextView
        android:id="@+id/deleteTodo"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickDeleteTask"
        android:text="@string/delete_todo"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_dateDue"
        app:layout_constraintTop_toBottomOf="@+id/listView_mark_completed"
        tools:text="@string/delete_todo" />
</android.support.constraint.ConstraintLayout>